--- a/_pages/news.html
+++ b/_pages/news.html
@@ -8,7 +8,7 @@ permalink: "/news.html"
     <div class="row justify-content-center">
         <div class="col-md-8">
         <h1 class="font-weight-bold title h6 text-uppercase mb-4">Tags</h1>
-        {% if post.categories is news %}    
+        {% if post.tags contains news %}    
         {% for tag in site.tags %} 
         <h4 class="font-weight-bold spanborder text-capitalize" id="{{ tag[0] | downcase }}"><span>{{ tag[0] }}</span></h4>
             
