--- a/_pages/issues/jasic/index.html
+++ b/_pages/issues/jasic/index.html
@@ -1,7 +1,7 @@
 ---
 title: "The Jasic Trade Union Struggle"
 layout: default
-permalink: "/issues/jasic.html"
+permalink: "/issues/jasic/index.html"
 ---
 
 <div class="container">
