Update and rename _pages/issues/jasic/index.html to _pages/issues/jasic.html

--- a/_pages/issues/jasic.html
+++ b/_pages/issues/jasic.html
@@ -1,7 +1,7 @@
 ---
 title: "The Jasic Trade Union Struggle"
 layout: default
-permalink: "/issues/jasic/index.html"
+permalink: "/issues/jasic.html"
 ---
 
 <div class="container">
