--- a/_pages/detainees.html
+++ b/_pages/detainees.html
@@ -1,5 +1,5 @@
 ---
-title: "Hunan Workers' Struggle for Silicosis Compensation"
+title: "2018-2019 Labor Crackdown Detainees"
 layout: default
 permalink: "/detainees.html"
 ---
@@ -7,7 +7,7 @@ permalink: "/detainees.html"
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-8">
-         <h1 class="font-weight-bold title h6 text-uppercase mb-4">News</h1>
+         <h1 class="font-weight-bold title h6 text-uppercase mb-4">2018-2019 Labor Crackdown Detainees</h1>
 
         {% for post in site.tags.detainees %}
         {% if post.title != null %}
