--- a/_pages/issues/silicosis.html
+++ b/_pages/issues/silicosis.html
@@ -7,7 +7,7 @@ permalink: "/issues/silicosis.html"
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-8">
-         <h1 class="font-weight-bold title h6 text-uppercase mb-4">News</h1>
+         <h1 class="font-weight-bold title h6 text-uppercase mb-4">{{page.title}}</h1>
 
         {% for post in site.tags.silicosis %}
         {% if post.title != null %}
