--- a/index.html
+++ b/index.html
@@ -56,13 +56,6 @@ layout: default
         {{ latest_post.excerpt | strip_html | strip_newlines | truncate: 136 }}
     </p>
     <div>
-        <small class="d-block text-muted">
-            In <span class="catlist">
-                {% for category in latest_post.categories %}
-                <a class="text-capitalize text-muted smoothscroll" href="{{site.baseurl}}/categories.html#{{ category | downcase }}">{{ category }}</a><span class="sep">, </span>
-                {% endfor %}
-                </span>                   
-        </small>
         <small class="text-muted">
             {{ latest_post.date | date: '%b %d, %Y' }}
         </small>
@@ -87,13 +80,9 @@ layout: default
                     <h2 class="mb-2 h6 font-weight-bold">
                     <a class="text-dark" href="{{site.baseurl}}{{second_post.url}}">{{ second_post.title }}</a>
                     </h2>
-                    <small class="d-block text-muted">
-                        In <span class="catlist">
-                        {% for category in second_post.categories %}
-                        <a class="text-capitalize text-muted smoothscroll" href="{{site.baseurl}}/categories.html#{{ category | downcase }}">{{ category }}</a><span class="sep">, </span>
-                        {% endfor %}
-                        </span>                   
-                    </small>
+                    <p class="excerpt">
+                        {{ latest_post.excerpt | strip_html | strip_newlines | truncate: 80 }}
+                    </p>
                     <small class="text-muted">
                         {{ second_post.date | date: '%b %d, %Y' }}
                     </small>
@@ -114,13 +103,9 @@ layout: default
                     <h2 class="mb-2 h6 font-weight-bold">
                     <a class="text-dark" href="{{site.baseurl}}{{third_post.url}}">{{ third_post.title }}</a>
                     </h2>
-                    <small class="d-block text-muted">
-                        In <span class="catlist">
-                        {% for category in third_post.categories %}
-                        <a class="text-capitalize text-muted smoothscroll" href="{{site.baseurl}}/categories.html#{{ category | downcase }}">{{ category }}</a><span class="sep">, </span>
-                        {% endfor %}
-                        </span>                   
-                    </small>
+                    <p class="excerpt">
+                        {{ latest_post.excerpt | strip_html | strip_newlines | truncate: 80 }}
+                    </p>
                     <small class="text-muted">
                         {{ third_post.date | date: '%b %d, %Y' }}
                     </small>
@@ -141,13 +126,9 @@ layout: default
                     <h2 class="mb-2 h6 font-weight-bold">
                     <a class="text-dark" href="{{site.baseurl}}{{fourth_post.url}}">{{ fourth_post.title }}</a>
                     </h2>
-                    <small class="d-block text-muted">
-                        In <span class="catlist">
-                        {% for category in fourth_post.categories %}
-                        <a class="text-capitalize text-muted smoothscroll" href="{{site.baseurl}}/categories.html#{{ category | downcase }}">{{ category }}</a><span class="sep">, </span>
-                        {% endfor %}
-                        </span>                   
-                    </small>
+                    <p class="excerpt">
+                        {{ latest_post.excerpt | strip_html | strip_newlines | truncate: 80 }}
+                    </p>
                     <small class="text-muted">
                         {{ fourth_post.date | date: '%b %d, %Y' }}
                     </small>
