--- a/zh/index.html
+++ b/zh/index.html
@@ -11,8 +11,7 @@ lang-ref: index
 
 
 <!-- Sticky - add sticky tag to the post you want to highlight here - tags: [sticky] -->
-{% for post in site.posts %} 
-{% if post.tags contains "sticky-zh" %}
+{% for post in site.tags.sticky-zh %} 
 <div class="jumbotron jumbotron-fluid jumbotron-home pt-0 pb-0 mt-3 mb-2rem bg-orange position-relative">
     <div class="pl-4 pr-0 h-100 tofront">
         <div class="row justify-content-between">
@@ -28,7 +27,6 @@ lang-ref: index
         </div>
     </div>
 </div> 
-{% endif %}
 {% endfor %}
 
 
