--- a/zh/index.html
+++ b/zh/index.html
@@ -11,7 +11,8 @@ lang-ref: index
 
 
 <!-- Sticky - add sticky tag to the post you want to highlight here - tags: [sticky] -->
-{% for post in site.tags.sticky-zh %} 
+{% for post in site.posts %} 
+{% if post.tags contains "sticky-zh" %}
 <div class="jumbotron jumbotron-fluid jumbotron-home pt-0 pb-0 mt-3 mb-2rem bg-orange position-relative">
     <div class="pl-4 pr-0 h-100 tofront">
         <div class="row justify-content-between">
@@ -20,15 +21,15 @@ lang-ref: index
                 <p class="mb-3 lead">
                     {{ post.excerpt | strip_html | strip_newlines | truncate: 136 }}
                 </p>
-                <a href="{{site.baseurl}}{{post.url}}" class="btn btn-dark">Read More</a>
+                <a href="{{site.baseurl}}{{post.url}}" class="btn btn-dark">继续阅读</a>
             </div>
             <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url({{site.baseurl}}/{{ post.image }});">	
             </div>
         </div>
     </div>
 </div> 
+{% endif %}
 {% endfor %}
-
 
     
 
