--- a/zh/index.html
+++ b/zh/index.html
@@ -7,12 +7,12 @@ lang-ref: index
 
 <div class="container">
     
-{% if page.url == "/" %}
+{% if page.url == "/zh/" %}
 
 
 <!-- Sticky - add sticky tag to the post you want to highlight here - tags: [sticky] -->
 {% for post in site.posts %} 
-{% if post.tags contains "sticky" %}
+{% if post.tags contains "sticky-zh" %}
 <div class="jumbotron jumbotron-fluid jumbotron-home pt-0 pb-0 mt-3 mb-2rem bg-orange position-relative">
     <div class="pl-4 pr-0 h-100 tofront">
         <div class="row justify-content-between">
