--- a/zh/index.html
+++ b/zh/index.html
@@ -8,7 +8,7 @@ permalink: /index_zh.html
 
 <div class="container">
     
-{% if page.url == "/zh/" %}
+{% if page.url == "/index_zh.html" %}
 
 
 <!-- Sticky - add sticky tag to the post you want to highlight here - tags: [sticky] -->
