--- a/zh/index.html
+++ b/zh/index.html
@@ -3,12 +3,12 @@ title: "主页"
 layout: default
 lang: zh
 lang-ref: index
-permalink: /index_zh.html
+permalink: /index-zh.html
 ---
 
 <div class="container">
     
-{% if page.url == "/index_zh.html" %}
+{% if page.url == "/index-zh.html" %}
 
 
 <!-- Sticky - add sticky tag to the post you want to highlight here - tags: [sticky] -->
